fix:#491 테스트 오류 수정 및 ConstraintViolationException 핸들러 추가